<resources>
    <string name="app_name">VideoEditor</string>
    <string name="size">Размер</string>
    <string name="path">Путь</string>
    <string name="bitrate">Битрейт</string>
    <string name="duration">Продолжительность</string>
    <string name="startTime">Начальное время</string>
    <string name="height">Высота</string>
    <string name="width">Ширина</string>
    <string name="frameRate">Частота кадров</string>
    <string name="aspectRatio">Соотношение сторон</string>

    <string name="preset_rendering">Предустановка рендеринга</string>

    <string name="ultrafast">Сверхбыстро</string>
    <string name="superfast">Супербыстро</string>
    <string name="veryfast">Очень быстро</string>
    <string name="faster">Быстро</string>
    <string name="fast">Ускоренно</string>
    <string name="medium">Средне</string>
    <string name="slow">Замедленно</string>
    <string name="slower">Медленно</string>
    <string name="veryslow">Очень медленно</string>

    <string name="tune">Специфика</string>
    <string name="film">Фильм</string>
    <string name="animation">Анимация</string>
    <string name="grain">Зернистость</string>
    <string name="fastdecode">Производительность</string>
    <string name="zerolatency">Максимально</string>
    <string name="countdown">Отсчет</string>


    <string name="ok">OK</string>
    <string name="сancel">Отмена</string>
    <string name="video_quality_level">Уровень качества видео</string>
    <string name="audio_quality_level">Уровень качества аудио</string>
    <string name="fps">fps</string>
    <string name="kbs">кбит/с</string>
    <string name="select_video">Выбрать видео</string>
    <string name="format">Формат</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="arrowRight"><![CDATA[>>]]></string>
    <string name="nameVideo">Название видео</string>
    <string name="videoPreview">Превью видео</string>
    <string name="videoResolution">Разрешение видео</string>
    <string name="codec">Кодек</string>
    <string name="h264">H264</string>
    <string name="vp9">VP9</string>
    <string name="av1">AV1</string>
    <string name="expansion">Расширение</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
