<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Settings_h265Fragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/preset_rendering" />

        <com.warkiz.widget.IndicatorSeekBar

            android:id="@+id/SeekBar_PresetRenderer"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"

            android:layout_marginRight="10dp"
            app:isb_indicator_color="@color/darkGrey"
            app:isb_indicator_text_color="@color/colorAccent"
            app:isb_indicator_text_size="18sp"
            app:isb_max="8"
            app:isb_min="0"
            app:isb_progress="7"
            app:isb_seek_smoothly="true"
            app:isb_show_indicator="circular_bubble"
            app:isb_show_tick_marks_type="oval"
            app:isb_show_tick_texts="true"
            app:isb_thumb_color="@color/honey"
            app:isb_thumb_size="14dp"
            app:isb_tick_marks_size="8dp"
            app:isb_tick_texts_array="@array/preset_rendering_options"
            app:isb_tick_texts_color="@color/colorPrimaryDark"
            app:isb_tick_texts_size="4sp"
            app:isb_ticks_count="9"
            app:isb_track_background_color="@color/peach"
            app:isb_track_background_size="2dp"
            app:isb_track_progress_color="@color/honey"
            app:isb_track_progress_size="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Filename"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/tune" />

        <com.warkiz.widget.IndicatorSeekBar

            android:id="@+id/SeekBar_Tune"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"

            app:isb_indicator_color="@color/darkGrey"
            app:isb_indicator_text_color="@color/colorAccent"
            app:isb_indicator_text_size="18sp"
            app:isb_max="5"
            app:isb_min="0"
            app:isb_progress="4"
            app:isb_seek_smoothly="true"
            app:isb_show_indicator="circular_bubble"
            app:isb_show_tick_marks_type="oval"
            app:isb_show_tick_texts="true"
            app:isb_thumb_color="@color/honey"
            app:isb_thumb_size="14dp"
            app:isb_tick_marks_size="12dp"
            app:isb_tick_texts_array="@array/tune_options"
            app:isb_tick_texts_color="@color/colorPrimaryDark"
            app:isb_tick_texts_size="6sp"
            app:isb_ticks_count="6"
            app:isb_track_background_color="@color/peach"
            app:isb_track_background_size="2dp"
            app:isb_track_progress_color="@color/honey"
            app:isb_track_progress_size="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Filename"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="77dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/frameRate"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editText_Framerate"
            app:layout_constraintStart_toEndOf="@+id/editText_Bitrate"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_Framerate"
            android:layout_width="85dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:contextClickable="false"
            android:elegantTextHeight="false"
            android:ems="10"
            android:freezesText="false"
            android:hint="@string/fps"
            android:inputType="numberDecimal"
            android:text="30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_Bitrate"
            android:layout_width="108dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:contextClickable="false"
            android:elegantTextHeight="false"
            android:ems="10"
            android:freezesText="false"
            android:hint="@string/kbs"
            android:inputType="number"
            android:text="5000"
            app:layout_constraintBottom_toTopOf="@+id/editText_Filename"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="83dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/bitrate"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editText_Bitrate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_FolderPath"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="Путь для сохранения"
            android:inputType="textPersonName"
            android:onClick=""
            app:layout_constraintBottom_toTopOf="@+id/buttonRunEncode"
            app:layout_constraintEnd_toStartOf="@+id/buttonSelectFolderPath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Filename"
            tools:ignore="OnClick" />

        <EditText
            android:id="@+id/editText_Filename"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="Имя файла"
            android:inputType="textPersonName"
            android:text="test"
            app:layout_constraintBottom_toTopOf="@+id/editText_FolderPath"
            app:layout_constraintEnd_toStartOf="@+id/Spinner_FormatVideoFile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/Spinner_FormatVideoFile"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText_Filename"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSelectFolderPath"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:text="Выбрать"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText_FolderPath"
            app:layout_constraintTop_toBottomOf="@+id/Spinner_FormatVideoFile" />
        <Button
            android:id="@+id/buttonRunEncode"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="Кодировать"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelectFolderPath"
            android:onClick="ClickOpenEncodersPage"
            tools:ignore="OnClick" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>